--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "gtin",
     "validate"
   ],
-  "version": "0.0.3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/0xflotus/valid-gtin"
+  },
+  "version": "0.0.4",
   "main": "index.js",
   "license": "MIT"
 }
