(Sec): Upgrade set-value to version 2.0.1

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^24.7.1"
+    "jest": "^24.7.1",
+    "set-value": "^3.0.1"
   }
 }
