yarn upgrade --latest

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^24.7.1",
-    "set-value": "^3.0.1"
+    "jest": "^24.9.0"
   }
 }
