--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ node_js:
 os:
   - linux
   - osx
+  - windows
+  - freebsd
 arch:
   - amd64
   - arm64
 notifications:
-  email: false
+  email: true
