--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,13 @@ node_js:
 os:
   - linux
   - osx
-  - windows
   - freebsd
+  - windows
+jobs:
+  allow_failures:
+  - os: 
+    - windows
+    - freebsd
 arch:
   - amd64
   - arm64
