--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,8 @@ jobs:
     name: Testing
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Testing with Node 16
-        uses: actions/checkout@v3
         uses: actions/setup-node@v3
         with:
           node-version: 16
