--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+      - run: npm install jest
       - run: npm test
