--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,10 @@ name: Testing
 
 on:
   push:
+    branches: 
+      - master
+    paths:
+      - "**.js"
   pull_request:
     branches: [master]
 
