--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,10 @@ on:
     paths:
       - "**.js"
   pull_request:
-    branches: [master]
+    branches: 
+      - master
+    paths:
+      - "**.js"
 
 jobs:
   build:
