--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,8 +2,11 @@ name: Lint Code Base
 
 on:
   push:
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    branches: 
+      - master
 
 jobs:
   build:
