--- a/.github/workflows/create-diagram.yml
+++ b/.github/workflows/create-diagram.yml
@@ -14,6 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: githubocto/repo-visualizer
+      - uses: githubocto/repo-visualizer@main
         with:
-          excluded_paths: ".github"
+          excluded_paths: ".github,.circleci"
