--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "valid_gtin": "./dist/cli.js"
   },
   "scripts": {
+    "clean": "rimraf dist",
+    "prepublishOnly": "yarn run clean && yarn run build",
     "build": "tsc",
     "test": "jest"
   },
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
   }
