--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf dist",
     "prepublishOnly": "yarn run clean && yarn run build",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint"
   },
   "author": "0xflotus",
   "keywords": [
@@ -22,10 +23,15 @@
   "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.13",
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   }
 }
