--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@types/eslint__js": "^8.42.3",
-    "@types/jest": "^29.5.13",
-    "eslint": "^9.12.0",
-    "globals": "^15.10.0",
-    "jest": "^29.7.0",
-    "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.8.0"
+    "@eslint/js": "9.12.0",
+    "@types/eslint__js": "8.42.3",
+    "@types/jest": "29.5.13",
+    "eslint": "9.12.0",
+    "globals": "15.10.0",
+    "jest": "29.7.0",
+    "rimraf": "6.0.1",
+    "ts-jest": "29.2.5",
+    "typescript": "5.6.2",
+    "typescript-eslint": "8.8.0"
   }
 }
