--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,12 @@
+node_modules/
+*.ts
 *.test.js
 .gitignore
 yarn.lock
 .github/
 .circleci/
+eslint.config.mjs
+jest.config.js
+package-lock.json
+tsconfig.json
+yarn.lock
