--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,15 +2,18 @@ name: Testing
 
 on:
   push:
-    branches: 
+    branches:
       - main
     paths:
       - "**.js"
   pull_request:
-    branches: 
+    branches:
       - main
 
 jobs:
+  strategy:
+    matrix:
+      version: [18, 20, 22]
   build:
     name: Testing
     runs-on: ubuntu-latest
@@ -19,6 +22,6 @@ jobs:
       - name: Testing with Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ matrix.version }}
       - run: npm install jest
       - run: npm test
