--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Testing with Node 20
+      - name: Testing with Node ${{ matrix.version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.version }}
