--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,7 @@ on:
       - 'tsconfig.json'
 
 jobs:
-  superlint:
+  lint:
     name: Lint Code Base
     runs-on: ubuntu-latest
     steps:
@@ -31,10 +31,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-            
       - name: Lint Code Base
-        run: npm i && npm run lint
+        run: npm install && npm run lint
   build:
+    needs: lint
     strategy:
       matrix:
         version: [18, 20, 22]
