chore: optimized workflows
* chore: combined workflows

* Delete .github/workflows/linter.yml

* Update pipeline.yml

* Update pipeline.yml

* Update index.test.ts

* Update index.test.ts

* Update pipeline.yml

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,18 @@ on:
       - 'tsconfig.json'
 
 jobs:
+  lint:
+    name: Lint Code Base
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Lint Code Base
+        run: npm install && npm run lint
   build:
+    needs: lint
     strategy:
       matrix:
         version: [18, 20, 22]
