--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,7 +37,7 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        version: [18, 20, 22]
+        version: [18, 20, 22, 24]
         os: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04, ubuntu-slim]
     name: Testing
     runs-on: ${{ matrix.os }}
